# rust_robot_simulator

./: Cargo.toml  README.md
src/: main.rs
